image from notes sending

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {"obsidian_path": "C:/Users/matve/Documents/Obsidian Vault\\",
  "tgbot_token":"7811582934:AAG1-dulEBcRXry6r5RAXmSKDv-Fa6LBb20",
- "default_notes_count":10
+ "default_notes_count":10,
+ "image_folder": "C:/Users/matve/Documents/Obsidian Vault/_resources"
 }
