--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
-{"obsidian_path": "C:/Users/matve/Documents/Obsidian Vault\\",
- "tgbot_token":"7811582934:AAG1-dulEBcRXry6r5RAXmSKDv-Fa6LBb20",
+{"obsidian_path": "/Users/timursalem/Documents/Obsidian Vault",
+ "tgbot_token":"7144154398:AAETaw1QSB_eNvCTypYbJfKq25do_vJw4sc",
  "default_notes_count":10,
- "image_folder": "C:/Users/matve/Documents/Obsidian Vault/_resources"
+ "image_folder": "/Users/timursalem/Documents/Obsidian Vault/_resources"
 }
